pyroscope (0.3.10) hardy; urgency=low

  * New "hashcheck" tool to check data against existing torrent file
  * rtcontrol: New option "--tee-view" to ADDITIONALLY show search
    results in ncurses view (modifies -V and --to-view behaviour)
  * rtcontrol: Prefix "--sort-fields" names with a '-' to get 
    descending order for that field only
  * lstor: new option --skip-validation to show the contents of
    broken metafiles (validation errors just result in warnings)

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 14 Nov 2010 10:27:51 +0100

pyroscope (0.3.9) hardy; urgency=low

  * Some internal fixes, mostly better error reporting

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 12 Sep 2010 14:04:09 +0200

pyroscope (0.3.8) hardy; urgency=low

  * rtxmlrpc: Added --xml option
  * chtor: Added --set and --clean-xseed options
  * pyroadmin: Added --output option
  * Some API changes

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 12 Sep 2010 13:36:36 +0200

pyroscope (0.3.7) hardy; urgency=low

  * rtmv: Added symlinked moving
  * Added grouping of conditions by [ ... ] (note the spaces)
  * Added field "uploaded" (which is actually referenced in 0.3.6's
    "short" output format, oops)
  * Added field "fno" (number of files in an item)
  * Added field "traits" (hierarchical classifier, great for use in
    completion paths)
  * rtcontrol: Renamed option "--view" into "--to-view"
  * rtcontrol: Added option "--from-view" (default is still "main")
  * rtcontrol: Exit with return code 44 when the selection is empty
    (think "404 NOT FOUND", but then exit codes should be < 256)
  * Added common --cron option that activates logging into the file
    ./log/cron.log in the configuration directory
  * Moved default output formats to [FORMATS] section of "config.ini"
  * mktor: Added --cross-seed option
  * mktor: Added --fast-resume option to add libtorrent completion
    information
  * chtor: Added --output-directory and "--fast-resume PATH" option
