@@ -13,6 +13,9 @@ engine = pyrocore.torrent.rtorrent:RtorrentEngine
 # Location of your rtorrent configuration
 rtorrent_rc = ~/.rtorrent.rc
 
+# Glob patterns of superfluous files that can be safely deleted when data files are removed
+waif_pattern_list = *~ *.swp
+
 # How often to repeat headers when --column-headers is used
 output_header_frequency = 30
 
